# IdenaArc-p2p

./: .env.example  .eslintignore  .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  jest.config.js  package-lock.json  package.json  requirements.txt
LICENSES/: LGPL-3.0.txt  MIT.txt
docs/: audit-manifest.md  chatgpt-connector-index.json  cleanup-prep-index.md  context-snapshot.md  deep-research-index.json  deep-research-integration.md  dependency-issues.md  epoch-global-knowledge-aggregation.md  federated-human-teacher-protocol.md  federated-model-distribution.md  flip-challenge-cloud-training.md  flip-challenge-import.md  flip-challenge-local-training.md  flip-consensus-audit.md  flip-format-reference.md  flip-model-benchmark-matrix.md  flip-prompt-pipeline-backlog.md  flip-reasoning-paper-optimizations.md  flip-training-ranking-architecture.md  fork-plan.md  human-teacher-annotation-architecture.md  local-ai-mvp-architecture.md  local-ai-qwen36-gguf.md  worklog.md
idena-go/: .gitignore  Makefile  README.md  go.mod
main/: ai-providers.js  ai-test-unit.js  ai-test-unit.test.js  channels.js  idena-devnet.js  idena-devnet.test.js  idena-node.js  idena-node.test.js  index.js  logger.js  p2p-artifacts.js  p2p-artifacts.test.js  persistence-store.js  preload.js  preload.test.js  renderer-data-bridge.js  renderer-data-bridge.test.js
python/idena_arc/: arc_sidecar.py  pyproject.toml  test_arc_sidecar.py
renderer/: i18n.js
scripts/: apply_teacher_distillation_labels.py  audit_flip_consensus.py  build-node-from-sources.js  build-node-macos-arm64.sh  (+47 more)
(+281 files in other folders)
