[project]
name = "idena-arc-sidecar"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "arcengine>=0.9.3",
]

[project.optional-dependencies]
arc-agi = [
  "arc-agi>=0.9.8",
]

[tool.idena-arc]
fallback-engine = "arcengine-compatible-local-grid-v0"
arc-agi-toolkit = "optional"

[tool.setuptools]
py-modules = ["arc_sidecar"]
